--- a/src/Pages/AboutStyle.css
+++ b/src/Pages/AboutStyle.css
@@ -1,25 +1,17 @@
 .about-me{
-    padding: 5rem 0 !important;
+    padding: 2rem 0;
 }
-.about-title.fs-2{
-    font-size: 2rem !important;
+.about-title{
     font-weight: 600;
-    margin-bottom: 2.8rem !important;
+    font-size: 1.4rem;
+    margin-bottom: 1.5rem;
 }
-.about-title::before{
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 1px;
-    background-color: #000000;
-    left: 160px;
-    top: 19px;
-}
-.about-me-body.mb-5{
-    margin-bottom: 8rem !important;
+.about-me-body{
+    margin-bottom: 2.5rem;
 }
 .about-me-img{
-    width: 45%;
+    width: 100%;
+    margin-bottom: 1.6rem;
 }
 .img-me{
     background-image: url(../Asset/152228904_3639387579513474_2193700901534596907_n.jpg);
@@ -28,18 +20,9 @@
     box-shadow: inset 0 0 0 0.4375rem rgb(255 255 255 / 30%);
     justify-self: center;
     background-size: cover;
-    width: 26rem;
-    height: 26rem;
+    width: 17rem;
+    height: 17rem;
     animation: profile_animate 8s ease-in-out infinite 1s;
-}
-
-
-.title-about{
-    color: red;
-    background: pink;
-    height: 2.5rem;
-    width: 14.375rem;
-    margin-bottom: 1.875rem;
 }
 
 @keyframes profile_animate{
@@ -57,206 +40,222 @@
 a{
     text-decoration: none;
 }
-
 .about-me-text{
-    width: 50%;
+    width: 100%;
 }
-.paragraph-sub.fs-5{
-    font-size: 1.3rem !important;
+.paragraph-sub{
+    font-size: 1.1rem;
 }
-.about-name.fs-1{
-    font-size: 2.2rem !important;
+.about-name{
+    font-size: 1.7rem;
     font-weight: 600;
 }
-.about-position.fs-3{
-    font-size: 1.5rem !important;
+.about-position{
+    font-size: 1.2rem;
     font-weight: 600;
 }
-.about-paragrap.fs-6{
-    font-size: 1.1rem !important;
+.about-paragrap{
+    font-size: 1rem;
+    text-align: justify;
 }
-
-.about-socials.no-list-style{
-    list-style-type: none;
-}
-.about-li.fs-5{
-    font-size: 1.1rem !important;
+.about-li{
+    font-size: 1rem;
 }
 .social-icon{
     font-size: 1.3125rem;
     margin-right: 0.625rem;
 }
-
-
-
-
-.about-cando-title.fs-3{
+.about-cando-title{
+    font-size: 1.3rem;
     font-weight: 600;
+    margin-bottom: 1.5rem;
 }
-.cando-img{
-    width: 12.5rem;
+.wcid-row{
+    flex-direction: column;
 }
-.col-card{
-    border-radius: 3px;
-    box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(0,0,0,.15);
-    transition: .3s ease-in-out;
-    min-height: 19.375rem;
+.wcid{
+    padding: .5rem 4rem;
+}
+.wcid-wrap-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1rem;
 }
 .svg{
-    width: 5.625rem;
+    width: 5rem;
 }
 .title-card{
     font-weight: 600;
+    font-size: 1.1rem;
+    margin-bottom: 0;
 }
-.sub-card.fs-6{
-    font-size: 1.1rem!important;
-}
-.col-card:hover{
-    box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(0,0,0,.45);
+.sub-card{
+    font-size: 1rem;
+    text-align: center;
 }
 
+@media (min-width: 576px) and (max-width: 767px) {
+   
+}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .about-title {
+        font-size: 1.8rem;
+        margin-bottom: 2rem;
+    }
+    .img-me{
+        width: 17.5rem;
+        height: 17.5rem;
+    }
+    .paragraph-sub {
+        font-size: 1.2rem;
+    }
+    .about-name {
+        font-size: 2rem;
+    }
+    .about-position {
+        font-size: 1.3rem;
+    }
+    .about-paragrap {
+        font-size: 1.1rem;
+    }
+    .about-li {
+        font-size: 1.1rem;
+    }
+    .about-cando-title {
+        font-size: 1.5rem;
+    }
+    .wcid-row {
+        flex-direction: row;
+    }
+    .wcid {
+        padding: 0 .5rem;
+    }
+    .wcid-wrap-card {
+        min-height: 16rem;
+    }
 
+}
 
-@media screen and (max-width: 787px){
-    .about-me {
-        padding: 3rem 0 !important;
+@media (min-width: 992px) and (max-width: 1199.98px){
+    .about-me-body {
+        margin-bottom: 4.5rem;
     }
-    .about-title.fs-2 {
-        font-size: 1.8rem !important;
-        margin-bottom: 2rem !important;
+    .about-me-body.flex-column{
+        flex-direction: row !important;
     }
-    .about-title::before{
-        width: 50px;
-        left: 140px;
-        top: 19px;
-    }
-    .about-me-body.d-flex{
-        flex-direction: column !important;
-    }
-    .about-me-body.mb-5 {
-        margin-bottom: 5rem !important;
-    }
-    .about-me-img {
-        width: 100%;
+    .about-title {
+        font-size: 2rem;
         margin-bottom: 2.5rem;
     }
-    .img-me {
-        width: 18rem;
-        height: 18rem;
-        box-shadow: inset 0 0 0 0.3125rem rgb(255 255 255 / 30%);
+    .about-me-img {
+        margin-bottom: 0;
     }
-    .about-me-text {
-        width: 100%;
+    .img-me{
+        width: 23rem;
+        height: 23rem;
     }
-    .paragraph-sub.fs-5 {
-        font-size: 1.2rem !important;
+    .paragraph-sub {
+        font-size: 1.3rem;
     }
-    .about-name.fs-1 {
-        font-size: 2rem !important;
+    .about-name {
+        font-size: 2.1rem;
     }
-    .about-position.fs-3 {
-        font-size: 1.3rem !important;
-        font-weight: 600;
+    .about-position {
+        font-size: 1.4rem;
     }
-    .about-paragrap.fs-6 {
-        font-size: 1.1rem !important;
-        text-align: justify;
+    .about-paragrap {
+        font-size: 1.2rem;
+        text-align: start;
     }
-    .about-li.fs-5 {
-        font-size: 1.1rem !important;
+    .about-li {
+        font-size: 1.1rem;
     }
-
-    .about-cando-title.fs-3{
-        font-size: 1.5rem !important;
-        margin-bottom: 2rem !important;
+    .about-cando-title {
+        font-size: 1.6rem;
+        margin-bottom: 1.8rem;
     }
-    .col.px-3{
-        padding: 0 .4rem !important;
+    .wcid-row {
+        flex-direction: row;
     }
-    .col-card.px-5 {
-        padding: 1rem .3rem !important;
+    .wcid {
+        padding: 0 .8rem;
+    }
+    .wcid-wrap-card {
+        min-height: 16rem;
     }
     .svg {
-        width: 5rem;
+        width: 5.5rem;
+        margin-bottom: .5rem;
     }
-    .title-card.fs-5{
-        font-size: 1.1rem !important;
+    .title-card {
+        font-size: 1.2rem;
     }
-    .sub-card.fs-6{
-        font-size: 1.1rem !important
+    .sub-card {
+        font-size: 1.1rem;
+        margin-bottom: 0;
     }
-
 }
 
-
-
-@media screen and (max-width: 480px){
-    .about-me {
-        padding: 2rem 0 !important;
+@media (min-width: 1200px){
+    .about-me-body {
+        margin-bottom: 4.5rem;
     }
-    .about-me-body.mb-5 {
-        margin-bottom: 4rem !important;
+    .about-me-body.flex-column{
+        flex-direction: row !important;
     }
-    .about-title.fs-2 {
-        font-size: 1.4rem !important;
-    }
-    .about-title::before{
-        width: 20px;
-        left: 108px;
-        top: 14px;
-    }
-    .img-me {
-        width: 17rem;
-        height: 17rem;
-        box-shadow: inset 0 0 0 0.3125rem rgb(255 255 255 / 30%);
+    .about-title {
+        font-size: 2rem;
+        margin-bottom: 2.5rem;
     }
     .about-me-img {
-        margin-bottom: 1.6rem;
+        margin-bottom: 0;
     }
-    .paragraph-sub.fs-5 {
-        font-size: 1.1rem !important;
+    .img-me{
+        width: 23rem;
+        height: 23rem;
     }
-    .about-name.fs-1 {
-        font-size: 1.7rem !important;
+    .paragraph-sub {
+        font-size: 1.3rem;
     }
-    .about-position.fs-3 {
-        font-size: 1.2rem !important;
-        font-weight: 600;
+    .about-name {
+        font-size: 2.1rem;
     }
-    .about-paragrap.fs-6 {
-        font-size: 1rem !important;
-        text-align: justify;
+    .about-position {
+        font-size: 1.4rem;
     }
-    .about-li.fs-5 {
-        font-size: 1rem !important;
+    .about-paragrap {
+        font-size: 1.2rem;
+        text-align: start;
     }
-
-    .about-cando-title.fs-3 {
-        font-size: 1.3rem !important;
-        margin-bottom: 1.8rem !important;
+    .about-li {
+        font-size: 1.1rem;
     }
-    .row{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .about-cando-title {
+        font-size: 1.6rem;
+        margin-bottom: 1.8rem;
     }
-    .col.px-3 {
-        padding: 0 0.5rem !important;
-        width: 85%;
+    .wcid-row {
+        flex-direction: row;
     }
-    .col-card {
-        min-height: 13.4375rem;
+    .wcid {
+        padding: 0 .8rem;
     }
-    .col-card.px-5 {
-        padding: 1rem 1rem !important;
+    .wcid-wrap-card {
+        min-height: 16rem;
     }
-    .col:not(:nth-child(1n+3)) {
-        margin-bottom: 1rem;
+    .svg {
+        width: 5.5rem;
+        margin-bottom: .5rem;
     }
-    .title-card.fs-5 {
-        margin-bottom: 0 !important;
+    .title-card {
+        font-size: 1.2rem;
     }
-    .sub-card.fs-6 {
-        font-size: 1rem !important;
+    .sub-card {
+        font-size: 1.1rem;
+        margin-bottom: 0;
     }
 }
