--- a/src/Pages/ProjectStyle.css
+++ b/src/Pages/ProjectStyle.css
@@ -1,31 +1,29 @@
 .project{
-    padding: 5rem 0;
+    padding: 2rem 0;
 }
-.prject-header-title.fs-2{
-    font-size: 2rem !important;
+.prject-header-title{
+    font-size: 1.4rem;
     font-weight: 600;
+    margin-bottom: 0;
 }
-.prject-header-title.mb-3{
-    margin-bottom: 1rem !important;
+.project-text{
+    font-size: 1rem;
+    margin-bottom: 0;
 }
-.prject-header-title::before{
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 1px;
-    background-color: #000000;
-    left: 183px;
-    top: 19px;
+.row-ga{
+    padding-top: .5rem;
 }
-.project-text.fs-6{
-    font-size: 1.1rem !important;
+.project-col{
+    padding-top: .6rem;
+    padding-bottom: .6rem;
 }
 .col-body{
     box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(0,0,0,.15);
     border-radius: 2px;
+    padding: 1rem;
 }
-.custom-gtc{
-    grid-template-columns: repeat(3, 1fr);
+.img-body{
+    margin-bottom: .5rem;
 }
 .project-img{
     transition: .3s ease-in-out;
@@ -34,117 +32,100 @@
     transform: scale(1.5);
 }
 .project-title{ 
-    font-weight: 600 !important;
+    font-size: 1.25rem;
+    margin-bottom: 0;
+    font-weight: 600;
 }
 .project-sub-title{
-    margin-bottom: .2rem !important;
-}
-.project-sub-title.fs-6{
-    font-size: 1.0625rem !important;
+    font-size: 1rem;
+    margin-bottom: 0;
 }
 .tech-use{
     color: #0062ff;
-    font-weight: 500 !important;
+    font-weight: 500;
+    font-size: 1rem;
+    margin-bottom: .4rem;
 }
-.tech-use.fs-5{
-    font-size: 1.0625rem !important;
-}
-.a-live-demo.fs-6, .a-code.fs-6{
-    font-size: 1.0625rem !important;
+.a-body{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .a-live-demo, .a-code{
+    width: 48%;
+}
+.a-live-demo, .a-code, .btn-show-more{
     transition: .3s ease-in-out;
-    border: 1px solid #000000 !important;
+    font-size: .9rem;
+    border-radius: .2rem;
+    border: 1px solid #000000;
+    text-align: center;
 }
 .a-live-demo:hover, .a-code:hover, .btn-show-more:hover{   
     background-color: #ffff !important;
     color: #000000 !important;
-    border: 1px solid #000000 !important;
+    border: 1px solid #000000;
+    font-weight: 600;
 }
-.btn-show-more.fs-6{
-    font-size: 1.1rem !important;
+.more-wrap {
+    padding-top: 1rem;
 }
 .btn-show-more{
-    border: 1px solid #000000 !important;
-    transition: .3s ease-in-out;
+    display: block;
+    padding: .6rem .7rem;
 }
 
 
-@media screen and (max-width: 787px){
-    .project{
-        padding: 3rem 0;
+@media (min-width: 576px) and (max-width: 767px) {
+   
+}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .prject-header-title {
+        font-size: 1.8rem;
     }
-    .prject-header-title::before{
-        width: 50px;
-        left: 183px;
-        top: 19px;
+    .project-text {
+        font-size: 1.1rem;
     }
-    .col-4{
-        width: 50% !important;
+    .project-sub-title {
+        font-size: 1.1rem;
     }
-    .custom-gtc{
-        grid-template-columns: repeat(2, 1fr);
+    .tech-use {
+        font-size: 1.1rem;
     }
-    
 }
 
-@media screen and (max-width: 480px){
-    .project{
-        padding: 2rem 0;
+@media (min-width: 992px) and (max-width: 1199.98px){
+    .prject-header-title {
+        font-size: 2rem;
     }
-    .prject-header-title.fs-2 {
-        font-size: 1.4rem !important;
+    .project-text {
+        font-size: 1.2rem;
     }
-    .prject-header-title.mb-3 {
-        margin-bottom: .5rem !important;
+    .project-title {
+        font-size: 1rem;
     }
-    .prject-header-title::before{
-        width: 20px;
-        left: 130px;
-        top: 14px;
+    .project-sub-title {
+        font-size: .9rem;
     }
-    .project-text.fs-6 {
-        font-size: 1rem !important;
+    .tech-use {
+        font-size: .9rem;
     }
-    .project-title.fs-5 {
-        font-size: 1.1rem!important;
-    }
-    .project-sub-title.fs-6 {
-        font-size: 1rem !important;
-    }
-    .tech-use.fs-5 {
-        font-size: 1rem !important;
-    }
-    .a-live-demo.py-2{
-        padding-top: .4rem !important;
-        padding-bottom: .4rem !important;
-    }
-    .a-live-demo.px-3{
-        padding-left: .6rem !important;
-        padding-right: .6rem !important;
-    }
-    .a-live-demo.fs-6{
-        font-size: 1rem !important;
-    }
-    .a-code.py-2{
-        padding-top: .4rem !important;
-        padding-bottom: .4rem !important;
-    }
-    .a-code.px-3{
-        padding-left: .6rem !important;
-        padding-right: .6rem !important;
-    }
-    .a-code.fs-6{
-        font-size: 1rem !important;
-    }
-    .btn-show-more.fs-6{
-        font-size: 1rem !important;
-    }
-    .col-4{
-        width: 100% !important;
-    }
-    .custom-gtc{
-        grid-template-columns: repeat(1, 1fr);
-    }
+}
 
+@media (min-width: 1200px){
+    .prject-header-title {
+        font-size: 2rem;
+    }
+    .project-text {
+        font-size: 1.2rem;
+    }
+    .project-title {
+        font-size: 1rem;
+    }
+    .project-sub-title {
+        font-size: .9rem;
+    }
+    .tech-use {
+        font-size: .9rem;
+    }
 }
