--- a/src/Pages/SkillsStyle.css
+++ b/src/Pages/SkillsStyle.css
@@ -1,149 +1,144 @@
 .skills{
-    padding: 5rem 0;
+    padding: 2rem 0;
 }
-.skill-title.fs-2{
-    font-size: 2rem !important;
+.skill-title{
+    font-size: 1.4rem;
+    margin-bottom: .8rem;
     font-weight: 600;
 }
-.skill-title::before{
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 1px;
-    background-color: #000000;
-    left: 205px;
-    top: 19px;
+.skill-subtitle{
+    font-size: 1.3rem;
+    font-weight: 600;
 }
-.skill-title.mb-3{
-    margin-bottom: .8rem !important;
-}
-.skill-subtitle.fw-bold{
-    font-weight: 600 !important;
-}
-.skill-text.fs-6{
-    font-size: 1.1rem !important;
-}
-.my-gap {
-    color: black;
-    transition: .3s ease-in-out;
-}
-.col-con{
-    border-radius: 2px;
-    padding: .3rem 0;
-}
-.my-gap:hover .skills-icon.html{
-    color: #E44D26;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.css{
-    color: #1B73BA;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.javaScript{
-    color: #F0DC4E;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.react{
-    color: #00D9FF;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.git{
-    color: #F05134;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.github{
-    color: #161614;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.commandline{
-    color: #3C3C3C;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .skills-icon.VSCode{
-    color: #3C99D4;
-    transition: .3s ease-in-out;
-}
-.my-gap:hover .icon-name{
-    color: #161614;
-    transition: .3s ease-in-out;
-}
-.skills-icon{
-    font-size: 5rem;
-    color: #aaaaaa;
-    transition: .3s ease-in-out;
-}
-.icon-name{
-    color: #aaaaaa;
-}
-.icon-name.fs-6{
-    font-size: .9rem !important;
+.skill-text{
+    font-size: 1rem;
+    margin-bottom: 0;
 }
 .skills-row{
-    width: 80%;
-    margin: 0 auto;
+    padding-top: 1.3rem;
+}
+.my-gap {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    cursor: pointer;
+}
+.tech-icon{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.skills-icon{
+    font-size: 4.5rem;
+    color: #aaa;
+}
+.icon-name{
+    font-size: .9rem;
+    margin-bottom: 0;
+    color: #aaa;
+}
+.skills-icon.html{
+    color: #E44D26;
+}
+.skills-icon.css{
+    color: #1B73BA;
+}
+.skills-icon.javaScript{
+    color: #F0DC4E;
+}
+.skills-icon.react{
+    color: #00D9FF;
+}
+.skills-icon.git{
+    color: #F05134;
+}
+.skills-icon.github{
+    color: #161614;
+}
+.skills-icon.commandline{
+    color: #3C3C3C;
+}
+.skills-icon.VSCode{
+    color: #3C99D4;
+}
+.bootstrap{
+    color: #8712F7;
+}
+.materialUi{
+    width: 72px;
+    height: 72px;
+    padding: .5rem 0;
+}
+.icon-name{
+    color: #161614;
 }
 
-/* .skeleton-skills-title{
-    height: 2.5rem;
-    width: 18.75rem;
-    background-color: #E5EBEF;
-    margin-bottom: 1rem;
-} */
+@media (min-width: 576px) and (max-width: 767px) {
+   
+}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .skill-title {
+        font-size: 1.8rem;
+    }
+    .skill-subtitle {
+        font-size: 1.5rem;
+    }
+    .skill-text {
+        font-size: 1.1rem;
+    }
+    .skills-icon {
+        font-size: 4.7rem;
+    }
+}
 
-@media screen and (max-width: 787px){
-    .skills{
-        padding: 3rem 0;
-    }
-    .skill-title::before{
-        width: 50px;
-        left: 205px;
-        top: 19px;
-    }
-    .my-gap{
-        width: auto !important;
-    }
-    .my-gap.mx-auto-custom{
-        margin: 0 auto;
-    }
+@media (min-width: 992px) and (max-width: 1199.98px){
     .skills-row {
         width: 90%;
+        margin: 0 auto;
     }
-    .col-con {
-        width: 120px;
+    .skill-title {
+        font-size: 2rem;
     }
-    .skills-icon{
-        font-size: 4.5rem;
+    .skill-subtitle {
+        font-size: 1.7rem;
     }
-    .skills-row.row-cols-2{
-        display: grid !important;
-        grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
+    .skill-text {
+        font-size: 1.2rem;
+    }
+    .icon-name {
+        font-size: 1rem;
+    }
+    .skills-icon {
+        font-size: 5rem;
+    }
+    .materialUi{
+        width: 80px;
+        height: 80px;
     }
 }
 
-@media screen and (max-width: 480px){
-    .skills{
-        padding: 2rem 0;
+@media (min-width: 1200px){
+    .skills-row {
+        width: 90%;
+        margin: 0 auto;
     }
-    .skill-title::before{
-        width: 20px;
-        left: 145px;
-        top: 14px;
+    .skill-title {
+        font-size: 2rem;
     }
-    .skills-row{
-        width: 100%;
+    .skill-subtitle {
+        font-size: 1.7rem;
     }
-    .skills-row.row-cols-2{
-        display: grid !important;
-        grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+    .skill-text {
+        font-size: 1.2rem;
     }
-    .skill-title.fs-2 {
-        font-size: 1.4rem !important;
+    .icon-name {
+        font-size: 1rem;
     }
-    .skill-subtitle.fs-3{
-        font-size: 1.3rem !important;
+    .skills-icon {
+        font-size: 5rem;
     }
-    .skill-text.fs-6 {
-        font-size: 1rem !important;
-        margin-bottom: 0 !important;
+    .materialUi{
+        width: 80px;
+        height: 80px;
     }
 }
