--- a/src/app.css
+++ b/src/app.css
@@ -8,3 +8,24 @@ body{
     font-family: 'Raleway' ,sans-serif;
     font-size: 16px;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 7px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #bfc2c7; 
+  border-radius: 7px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b2b4b8; 
+}
