add new technologies (java and mysql)

--- a/src/Pages/SkillsStyle.css
+++ b/src/Pages/SkillsStyle.css
@@ -82,6 +82,12 @@
 .skills-icon.mongoDB{
     color: #09934E;
 }
+.skills-icon.mySQL{
+    color: #00618A;
+}
+.skills-icon.java{
+    color: #5382A1;
+}
 .icon-name{
     color: #161614;
 }
