update project page and add component for modal of each project

--- a/src/Pages/ProjectStyle.css
+++ b/src/Pages/ProjectStyle.css
@@ -41,7 +41,7 @@
     margin-bottom: 0;
 }
 .tech-use{
-    color: #0062ff;
+    color: #1a1a1a;
     font-weight: 500;
     font-size: 1rem;
     margin-bottom: .4rem;
