--- a/src/Pages/SkillsStyle.css
+++ b/src/Pages/SkillsStyle.css
@@ -29,7 +29,7 @@
     justify-content: center;
 }
 .skills-icon{
-    font-size: 4.5rem;
+    font-size: 3.8rem;
     color: #aaa;
 }
 .icon-name{
@@ -65,8 +65,8 @@
     color: #8712F7;
 }
 .materialUi{
-    width: 72px;
-    height: 72px;
+    width: 55px;
+    height: 60px;
     padding: .5rem 0;
 }
 .skills-icon.typeScript{
@@ -96,7 +96,13 @@
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
-   
+    .skills-icon {
+        font-size: 3.3rem;
+    }
+    .materialUi{
+        width: 45px;
+        height: 50px;
+    }
 }
 @media (min-width: 768px) and (max-width: 991.98px){
     .skill-title {
@@ -109,7 +115,11 @@
         font-size: 1.1rem;
     }
     .skills-icon {
-        font-size: 4.7rem;
+        font-size: 3.3rem;
+    }
+    .materialUi{
+        width: 45px;
+        height: 50px;
     }
 }
 
@@ -131,11 +141,11 @@
         font-size: 1rem;
     }
     .skills-icon {
-        font-size: 5rem;
+        font-size: 3.3rem;
     }
     .materialUi{
-        width: 80px;
-        height: 80px;
+        width: 45px;
+        height: 50px;
     }
 }
 
@@ -157,10 +167,10 @@
         font-size: 1rem;
     }
     .skills-icon {
-        font-size: 5rem;
+        font-size: 3.3rem;
     }
     .materialUi{
-        width: 80px;
-        height: 80px;
+        width: 45px;
+        height: 50px;
     }
 }
